# acoustic-fwi-ndt-pytorch

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/domain/: Domain2D_CiE.txt  Domain2D_Fichtner_1pt_oben.txt  Domain2D_Fichtner_2pt.txt  Domain2D_Fichtner_3pt_oben.txt  Domain2D_model.txt  SmallDomain2D.txt  SmallDomain2D_1pt.txt  cracked.txt  homogeneous.txt  logo.txt  small_defect.txt  small_homogeneous.txt  three_cracks.txt  two_cracks.txt
docs/plans/: 2026-06-27-fwi-2d-plate-pytorch-port.md  2026-06-27-thesis-faithful-fwi-refactor.md
examples/: 01_forward_modeling.py  02_gradient_autodiff.py  03_gradient_adjoint.py  04_crack_inversion_lbfgs.py  04_inversion.py  05_frequency_study.py  05_multidefect_multisource.py  06_logo_inversion.py  07_multishot_logo.py
notebooks/: 01_autodiff_fwi.ipynb  02_adjoint_fwi_hockey_stick.ipynb  03_frequency_study_and_logo.ipynb  03_multidefect_multisource.ipynb  04_fwi_as_nn_training.ipynb  05_speed_investigation.ipynb
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
src/fwi/: __init__.py  adjoint.py  benchmark.py  config.py  domain.py  domaingen.py  forward.py  forward_conv2d.py  geometry.py  gradient_test.py  inversion.py  misfit.py  plotting.py  problems.py  rust_solver.py  wavelet.py
tests/: test_forward.py  test_gradients.py  test_inversion.py  test_io.py  test_speedtest.py
