[project]
name = "fwi"
version = "0.1.0"
description = "A PyTorch port of part of my PhD code: 2D acoustic full-waveform inversion for non-destructive testing, with autodiff and hand-coded adjoint-state gradients."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Robert Seidl", email = "robertseidl425@gmail.com" }]
keywords = ["full-waveform-inversion", "fwi", "adjoint-state", "pytorch", "seismology", "ndt", "wave-equation"]
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
notebooks = ["jupyter>=1.0", "nbconvert>=7.0", "ipykernel>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fwi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
include = ["src", "tests", "examples"]
